# termoApp

./: .gitignore  Dockerfile  LICENSE  README.md  deploy.bat  deploy.ps1  docker-compose.yml  env.example  pyproject.toml  requirements.txt
src/: app.py  cache.py  config.py  exceptions.py  logger.py  utils.py  validation.py
src/static/: script.js  styles.css
src/templates/: index.html
